--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-react-hooks": "4.x",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "stylelint-config-standard": "21.x",
